WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113077
REGRESSION(
r143102
): iframe with percentage height within table with anonymous cell fails
https://bugs.webkit.org/show_bug.cgi?id=113077
Summary
REGRESSION(r143102): iframe with percentage height within table with anonymou...
alan
Reported
2013-03-22 09:58:33 PDT
iframe in strict mode should take 100% height instead of auto. see test case
Attachments
iframe testcase
(1.62 KB, text/html)
2013-03-22 09:59 PDT
,
alan
no flags
Details
iframe testcase
(620 bytes, text/html)
2013-03-22 10:05 PDT
,
alan
no flags
Details
Patch
(6.10 KB, patch)
2013-03-22 11:51 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2013-03-22 09:59:28 PDT
Created
attachment 194578
[details]
iframe testcase
alan
Comment 2
2013-03-22 10:05:33 PDT
Created
attachment 194579
[details]
iframe testcase
alan
Comment 3
2013-03-22 10:07:41 PDT
<
rdar://problem/13396183
>
alan
Comment 4
2013-03-22 11:51:18 PDT
Created
attachment 194608
[details]
Patch
Robert Hogan
Comment 5
2013-03-27 00:54:03 PDT
Looks good to me. Thanks for spotting the mistake and fixing it.
Antti Koivisto
Comment 6
2013-03-27 05:23:28 PDT
Comment on
attachment 194608
[details]
Patch r=me
WebKit Review Bot
Comment 7
2013-03-27 16:58:07 PDT
Comment on
attachment 194608
[details]
Patch Clearing flags on attachment: 194608 Committed
r147021
: <
http://trac.webkit.org/changeset/147021
>
WebKit Review Bot
Comment 8
2013-03-27 16:58:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug